--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "joi": "^17.12.3",
     "jwt-decode": "^4.0.0",
@@ -18,6 +22,10 @@
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "validator": "^13.11.0"
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   }
 }
