--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.1",
     "mongoose-paginate-v2": "^1.8.0",
     "multer": "^1.4.5-lts.1",
